# rk-utils

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  readwise_work_prompt.txt  readwise_work_summary.md  requirements.txt
.github/workflows/: awesome-selfhosted.yml  build-and-push-postgres.yml  deploy-postgres.yml
caches/: django_20250204_to_20250212_summary.txt  django_20250225_to_20250304_summary.txt  django_20250310_to_20250319_summary.txt  django_2025_01_master_summary.txt  django_2025_02_master_summary.txt  django_2025_03_master_summary.txt  django_commit_summaries.json
configs/borgmatic/: config-default.yaml  config.yaml
docs/: installing_backups_on_server.md  upgrading_server_with_caprover.md
images/: Dockerfile.postgres  Dockerfile.typingming.mcp-server
notebooks/: Untitled.ipynb
scripts/: restart_docker_container.sh
src/: auth.py  book_review.py  config.py  personal_newsletter.py  utils.py
src/analysis/: Obsidian Parsing.ipynb  awesome-selfhosted.ipynb
src/github/: helpers.py  repo_summary_given_time_period.py  summarize_github_repo_changes.py
src/github/caches/: django_commit_summaries.json
src/hackernews/: get_my_comments.py  rasulkireev_comments.txt
src/mqtt/: client.py
src/obsidian/: main.py  monthly_journal_summary.py  summarize_daily_journal.py  summarize_me.py  utils.py  weekly_journal_summary.py  working_at_readwise_summary.py
src/other/: json_format.py  sqlite_format.py
src/paypal/: auth.py  core.py  plan.yml  plans.py  products.py  settings.py
src/paypal/data/: plan.yml  product.yml
src/raindrop/: main.py
src/readwise/: get_book_recommendations.py  get_books.py  get_latest_articles.py  highlights.py  profile_me_based_on_articles_saved.py  profile_me_based_on_highlights_made.py  reader_stats.py  readwise_stats.py  utils.py
src/scrapers/: getting-real.py  github_awesome_self_hosted_scraper.py  shape-up.py  utils.py
src/scripts/: weekly_newsletter_prep.py
src/twitter/: main.py  utils.py
src/typingmind/: chats_summary.py  export_chats_to_txt.py  save_chats.py
